--- a/faq.html
+++ b/faq.html
@@ -5,14 +5,14 @@ logo-title: assets/img/Logo.png
 ---
 
 <div class="row">
-{% for faq in site.faqs %}
+{% for faq in site.data.faqs %}
     <div class="col-12 col-xl-4 col-md-6">
 	    <div class="card mb-3">
 		    <div class="card-body">
-			    <h3 class="text-title text-center">{{faq.title }}</h3>
+			    <h3 class="text-title text-center">{{faq.question }}</h3>
 
 			    <p class="card-text text-center">
-			    {{ faq.content }}
+			    {{ faq.answer }}
 			    </p>
 		    </div text-center>
 	    </div>
