Hasta pronto, OBM

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
 title: Contacto
 layout: home
-logo-title: assets/img/Logo.png
+<!-- logo-title: assets/img/Logo.png -->
 order: 2
 ---
 
@@ -14,8 +14,8 @@ order: 2
 						</div>
 					</div>
 
-					<div class="row">
-						<div class="col-12 col-xl-4 col-md-6">
+					<div class="row align-items-center text-center">
+						<!-- <div class="col-12 col-xl-4 col-md-6">
 							<div class="card mb-3">
 								<div class="row g-0 align-items-center text-center p-2">
 									<div class="col-4">
@@ -35,9 +35,9 @@ order: 2
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 
-						<div class="col-12 col-xl-4 col-md-6">
+						<div class="col-12">
 							<div class="card mb-3">
 								<div class="row g-0 align-items-center text-center p-2">
 									<div class="col-4">
@@ -51,7 +51,7 @@ order: 2
 											<p class="card-text">
 												¡Envíanos un correo!
 												<br>
-												<text style="font-family: monospace;">onmaps@cimat.mx</text>
+												<text style="font-family: monospace;">joshua.gonzalez@cimat.mx</text>
 											</p>
 										</div>
 									</div>
@@ -59,7 +59,7 @@ order: 2
 							</div>
 						</div>
 
-						<div class="col-12 col-xl-4 col-md-6">
+						<!-- <div class="col-12 col-xl-4 col-md-6">
 							<div class="card mb-3">
 								<div class="row g-0 align-items-center text-center p-2">
 									<div class="col-4">
@@ -83,10 +83,10 @@ order: 2
 									</div>
 								</div>
 							</div>
-						</div>
+						</div> -->
 					</div>
 
-					<div class="row">
+					<!-- <div class="row">
 						<div class="col-12">
 							<div class="card mb-3">
 								<div class="row g-0 align-items-center text-center p-2">
@@ -108,5 +108,5 @@ order: 2
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
