--- a/historia-y-colaboradores.html
+++ b/historia-y-colaboradores.html
@@ -1,7 +1,7 @@
 ---
 title: Historia y colaboradores
 layout: home
-logo-title: assets/img/Logo.png
+<!-- logo-title: assets/img/Logo.png -->
 order: 4
 ---
 
