--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 ---
 # Feel free to add content and custom Front Matter to this file.
 # To modify the layout, see https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-title: Biblioteca Virtual de la OBM Guanajuato
+title: Biblioteca Virtual Olímpica de Joshua
 layout: home
-logo-title: assets/img/Logo.png
+logo-title:
 order: 1
 ---
 
