--- a/faq.html
+++ b/faq.html
@@ -1,7 +1,7 @@
 ---
 title: Preguntas frecuentes
 layout: home
-logo-title: assets/img/Logo.png
+<!-- logo-title: assets/img/Logo.png -->
 ---
 
 <div class="row">
