--- a/onmaps-guanajuato.html
+++ b/onmaps-guanajuato.html
@@ -5,7 +5,7 @@ logo-title:
 layout: home
 ---
 <div class= "row">
-  {% for item in site.data.onmaps_guanajuato_historico reversed%}
+  {% for item in site.data.historico.onmaps_guanajuato reversed%}
   <h2 class="text-center">{{item.year}}</h2>
   <table class="table table-dark table-hover">
     <thead>
