--- a/historia-y-colaboradores.html
+++ b/historia-y-colaboradores.html
@@ -57,7 +57,7 @@ order: 4
                     height="150px"
                     style="object-fit: contain;"
                     class="card-img-top border-bottom bg-white"
-                    src="{{ item.thumbnail | relative_url}}"
+                    src="{{site.baseurl}}/assets/img/{{item.thumbnail}}"
                     alt="{{ item.title }}">
                 </a>
                 <div class="card-body">
