Eliora, Guardiana de los Tomos Recuperados
Mejoras a Eliora. Ahora registra libros, colaboradores y preguntas frecuentes. Falta compactar las colecciones de selectivos para agregárselos.

--- a/historia-y-colaboradores.html
+++ b/historia-y-colaboradores.html
@@ -58,7 +58,7 @@ order: 4
                     style="object-fit: contain;"
                     class="card-img-top border-bottom bg-white"
                     src="{{site.baseurl}}/assets/img/{{item.thumbnail}}"
-                    alt="{{ item.title }}">
+                    alt="{{ item.name }}">
                 </a>
                 <div class="card-body">
                   <h6 class="card-title">
@@ -67,7 +67,7 @@ order: 4
                     target="_blank"
                     class="card-link"
                     rel="noopener noreferrer"
-                    >{{ item.title }}</a>
+                    >{{ item.name }}</a>
                   </h6>
                   <p class="card-text">
                     {{ item.contribution }}
