Little text secrets

--- a/onmaps-guanajuato.html
+++ b/onmaps-guanajuato.html
@@ -3,6 +3,7 @@ title: Olimpiada Nacional de Matemáticas para Alumnos de Primaria y Secundaria
 urlname: onmaps-guanajuato
 logo-title:
 layout: home
+altname: Nadie olvidará
 ---
 <div class= "row">
   {% for item in site.data.historico.onmaps_guanajuato reversed%}
