Minor info update
Nuevo correo para asuntos de la Biblioteca y actualización de la historia

--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@ order: 2
 											<p class="card-text">
 												¡Envíanos un correo!
 												<br>
-												<text style="font-family: monospace;">joshua.gonzalez@cimat.mx</text>
+												<text style="font-family: monospace;">{{site.email}}</text>
 											</p>
 										</div>
 									</div>
