--- a/historia-y-colaboradores.html
+++ b/historia-y-colaboradores.html
@@ -41,6 +41,9 @@ order: 4
               <p>
                 Los siguientes años consistieron en agregar material, crear secciones para esos materiales y reacomodar los materiales existentes. Ahora, la Biblioteca cuenta con más de 160 archivos repartidos en 6 secciones. Quiero recalcar que nada de esto sería posible si no fuera por la gente que escribió los entrenamientos, la gente que los guardó y la gente que aceptó donarlos para nuestra causa: recopilación, preservación y difusión.
               </p>
+			  <p>
+				En 2025, después de algunas diferencias con la coordinación de la Olimpiada en Guanajuato, el proyecto de la Biblioteca Virtual de la OBM pasó a ser la Biblioteca Virtual Olímpica de Joshua con el fin de proteger lo ya creado y asegurar que el proyecto continuaría en el futuro.
+			  </p>
 						</div>
 					</div>
           <div class="row row-cols-1 row-cols-xl-4 row-cols-md-3 g-4"">
