--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@ order: 1
 								<div class="card-body">
 									<h4 class="card-title">Estado actual de la página</h4>
 									<p class="card-text">
-										Como se podrá observar por el aspecto y contenido de la página, ésta se encuentra en construcción. Esperamos tener una biblioteca completamente funcional para el final del 2024.
+										La Biblioteca se encuentra en constante crecimiento. Aunque considero que, para este punto, es más que funcional, siempre estoy buscando maneras de mejorarla e incluir más y más material y mejorar la forma en que se organiza internamente. Si encuentran alguna falla o tienen alguna sugerencia, pueden <a href="contact.html">contactarme</a>.  
 									</p>
 								</div>
 							</div>
