Joshua también quiere conocerte

--- a/contact.html
+++ b/contact.html
@@ -58,6 +58,27 @@ order: 2
 								</div>
 							</div>
 						</div>
+						<div class="col-12">
+							<div class="card mb-3">
+								<div class="row g-0 align-items-center text-center p-2">
+									<div class="col-4">
+										<img height="100" width="100" src="assets/img/js.png" alt="Contacta a Joshua"
+											class="img-fluid rounded-start rounded-end"
+										/>
+									</div>
+
+									<div class="col-8">
+										<div class="card-body">
+											<p class="card-text">
+												Contacta a Joshua
+												<br>
+												<text style="font-family: monospace;">{{site.url}}</text>
+											</p>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
 
 						<!-- <div class="col-12 col-xl-4 col-md-6">
 							<div class="card mb-3">
